# bean_vulnerable

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SPATIAL_GNN_INTEGRATION_PROOF.md  bean-vuln  bean-vuln2  bean_vuln  bean_vuln2  comprehensive_graphs.sc  compute_ece.py  extract_cpg_for_gnn.sc  extract_cpg_simple.sc  generate_graphs.sh  generate_joern_graphs.sc  prepare_training_data.py  requirements.txt  setup.cfg  simple_graphs.sc  test_result.json  train_model.py  verify_installation.py
.github/workflows/: bean-vulnerable-aeg.yml
analysis/: BeanVulnerableReferenceImplementation.java  ComprehensiveTestSuite.java  PatchedSample.java  benchmark_calibration.py  cross_validation_summary.py  juliet_calibration.py  run_seed_corpus.py  train_spatial_gnn_pipeline.py
audit/: index.html
bean_vulnerable/: README.md  explainability_enhancement.md
docs/: tai_e_debugging.md  tai_e_integration.md
examples/: README.md
java/aeg-lite/: pom.xml
java/bean-vulnerable-maven-plugin/: pom.xml
production_security_audit/: VUL006_XSS_ServletResponse.java  index.html
scripts/: install_cli.sh  setup_tai_e.sh  uninstall_cli.sh
src/: __init__.py
src/ci/: __init__.py  edge_quality_guard.py
src/core/: __init__.py  advanced_feature_engineering.py  bean_vuln_cli.py  bean_vuln_cli_backup.py  bean_vuln_cli_broken.py  bean_vuln_cli_enhanced.py  cescl_inference.py  cf_explainer.py  (+25 more)
tests/: conftest.py  test_cli.py  test_cli_directory_scan.py  test_cli_json_safety.py  test_combine_confidence.py  test_compute_ece.py  test_framework.py  test_gnn_edge_type_alignment.py  test_html_report_confidence_breakdown.py  test_joern_integration_edges.py  test_taint_tracking_alias_metrics.py  test_vul4j_mapping_and_split.py
(+127 files in other folders)
