[metadata]
name = bean-vulnerable-gnn
version = 2.0.0
description = Bean Vulnerable GNN Framework
license = MIT

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.10
install_requires =
    numpy<2
    pandas>=2.0
    PyYAML>=6.0
    dgl==2.1.0
    pydantic>=1.10,<2

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    bean-vuln = core.bean_vuln_cli:main
    bean-vuln2 = core.bean_vuln_cli_enhanced:main
